--- a/conf/db.conf
+++ b/conf/db.conf
@@ -1,38 +1,38 @@
 [doctor_user_read]
-host=127.0.0.1
+host=47.106.101.39
 port=3306
 user=root
 password=Aa12j3kljdskj=
-charset=utf8mb4
+charset=utf8
 connection_count=1
 
 [doctor_user_write]
-host=127.0.0.1
+host=47.106.101.39
 port=3306
 user=root
 password=Aa12j3kljdskj=
-charset=utf8mb4
+charset=utf8
 connection_count=1
 
 [doctor_read]
-host=127.0.0.1
+host=47.106.101.39
 port=3306
 user=root
 password=Aa12j3kljdskj=
-charset=utf8mb4
+charset=utf8
 connection_count=1
 
 [doctor_write]
-host=127.0.0.1
+host=47.106.101.39
 port=3306
 user=root
 password=Aa12j3kljdskj=
-charset=utf8mb4
+charset=utf8
 connection_count=1
 
 
 [doctor_sphinx]
-host=127.0.0.1
+host=47.106.101.39
 port=9316
 user=root
 password=Aa12j3kljdskj=
